<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <View
        android:id="@+id/supporter"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/layoutPlayer"
        app:layout_constraintStart_toStartOf="@id/layoutPlayer"
        app:layout_constraintTop_toTopOf="@id/layoutPlayer" />

    <View
        android:id="@+id/supporterForAlbum"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toTopOf="@id/layoutPlayer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorHint"
        app:layout_constraintBottom_toTopOf="@id/supporterForAlbum"
        app:layout_constraintEnd_toStartOf="@id/supporterForAlbum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorHint"
        app:layout_constraintBottom_toTopOf="@id/supporter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@id/view1"/>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="260dp"
        android:scaleType="centerCrop"
        android:src="@drawable/girl2"
        app:layout_constraintBottom_toBottomOf="@id/supporterForAlbum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/supporterForAlbum"
        app:riv_corner_radius="12dp" />

    <TextView
        android:id="@+id/songName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/current_song_title"
        android:textColor="@color/colorPrimaryText"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imageView"/>

    <TextView
        android:id="@+id/text_Artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/artist_name"
        android:textColor="@color/colorSecondaryText"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/songName"/>

    <TextView
        android:id="@+id/now_playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPrimaryText"
        android:textAllCaps="true"
        android:text="@string/now_playing"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/app_name"
        android:rotation="-90"
        android:src="@drawable/ic_up"
        app:layout_constraintBottom_toBottomOf="@id/now_playing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/now_playing"
        android:layout_marginLeft="20dp" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_menu"
        app:layout_constraintBottom_toBottomOf="@id/now_playing"
        app:layout_constraintTop_toTopOf="@id/now_playing"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="20dp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/player_background"
        app:layout_constraintBottom_toBottomOf="parent">


        <TextView
            android:id="@+id/textLyrics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/lyrics"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/imageLyrics"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_up"
            app:layout_constraintBottom_toBottomOf="@+id/textLyrics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/colorPrimary" />


        <ImageButton
            android:id="@+id/play_pause"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/play_button_background"
            android:contentDescription="@string/app_name"
            android:padding="12dp"
            android:src="@drawable/pause"
            android:tint="@color/colorWhite"
            app:layout_constraintBottom_toTopOf="@id/imageLyrics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/previous"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/next_previous_button_background"
            android:contentDescription="@string/app_name"
            android:padding="4dp"
            android:src="@drawable/previous"
            app:layout_constraintBottom_toBottomOf="@id/play_pause"
            app:layout_constraintEnd_toStartOf="@id/play_pause"
            app:layout_constraintTop_toTopOf="@id/play_pause"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp" />

        <ImageButton
            android:id="@+id/next"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/next_previous_button_background"
            android:contentDescription="@string/app_name"
            android:padding="4dp"
            android:src="@drawable/next"
            app:layout_constraintBottom_toBottomOf="@id/play_pause"
            app:layout_constraintStart_toEndOf="@id/play_pause"
            app:layout_constraintTop_toTopOf="@id/play_pause"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />


        <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="25dp"
            android:progress="30"
            android:theme="@style/SeekBarTheme"
            app:layout_constraintBottom_toTopOf="@id/play_pause" />
        <TextView
            android:id="@+id/currentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="4dp"
            android:text="@string/_1_37"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/seekbar"
            app:layout_constraintStart_toStartOf="@id/seekbar"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp" />

        <TextView
            android:id="@+id/totalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="4dp"
            android:text="@string/_4_12"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/seekbar"
            app:layout_constraintEnd_toEndOf="@id/seekbar"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>